# hudlink

./: # MANIFEST.in.txt  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  draft-pdf.yml  hudlink.ipynb  hudlink_notebook.ipynb  paper.bib  paper.md  pyproject.toml
.github/workflows/: tests.yaml
benchmarks/: RESULTS.md  host.json  runtime_FL2022.py
data/: README.md  missing_counties.txt  us_counties_fips.json
data/ak/: ak_geocorr_puma_2012.csv  ak_geocorr_puma_2022.csv  ak_hud_hcv_picsubhhds_2022.csv  ak_hud_income_limits_2022.csv  ak_incarc_data.csv
data/al/: al_geocorr_puma_2012.csv  al_geocorr_puma_2022.csv  al_hud_hcv_picsubhhds_2022.csv  al_hud_hcv_picsubhhds_update_2022.csv  al_hud_income_limits_2022.csv  al_incarc_data.csv
data/ar/: ar_geocorr_puma_2012.csv  ar_geocorr_puma_2022.csv  ar_hud_hcv_picsubhhds_2022.csv  ar_hud_income_limits_2022.csv  ar_incarc_data.csv
data/az/: az_geocorr_puma_2012.csv  az_geocorr_puma_2022.csv  az_hud_hcv_picsubhhds_2022.csv  az_hud_income_limits_2022.csv  az_incarc_data.csv
data/ca/: ca_geocorr_puma_2012.csv  ca_geocorr_puma_2022.csv  ca_hud_hcv_picsubhhds_2022.csv  ca_hud_income_limits_2022.csv  ca_incarc_data.csv
data/co/: co_geocorr_puma_2012.csv  co_geocorr_puma_2022.csv  co_hud_hcv_picsubhhds_2022.csv  co_hud_income_limits_2022.csv  co_incarc_data.csv
data/ct/: ct_geocorr_puma_2012.csv  ct_geocorr_puma_2022.csv  ct_hud_hcv_picsubhhds_2022.csv  ct_hud_income_limits_2022.csv  ct_incarc_data.csv
data/data_dictionaries/: README.md  eligibility_df_dictionary.csv  summary_df_dictionary.csv
data/dc/: dc_geocorr_puma_2012.csv  dc_geocorr_puma_2022.csv  dc_hud_hcv_picsubhhds_2022.csv  dc_hud_income_limits_2022.csv  dc_incarc_data.csv
data/de/: de_geocorr_puma_2012.csv  de_geocorr_puma_2022.csv  de_hud_hcv_picsubhhds_2022.csv  de_hud_income_limits_2022.csv  de_incarc_data.csv
data/fips_codes/: COUNTY_FIPS_MAPPING.txt
data/fl/: fl_geocorr_puma_2012.csv  fl_geocorr_puma_2022.csv  fl_hud_hcv_picsubhhds_2022.csv  fl_hud_income_limits_2022.csv  fl_incarc_data.csv
data/ga/: ga_geocorr_puma_2012.csv  ga_geocorr_puma_2022.csv  ga_hud_hcv_picsubhhds_2022.csv  ga_hud_income_limits_2022.csv  ga_incarc_data.csv
data/hi/: hi_geocorr_puma_2012.csv  hi_geocorr_puma_2022.csv  hi_hud_hcv_picsubhhds_2022.csv  hi_hud_income_limits_2022.csv  hi_incarc_data.csv
data/ia/: ia_geocorr_puma_2012.csv  ia_geocorr_puma_2022.csv  ia_hud_hcv_picsubhhds_2022.csv  ia_hud_income_limits_2022.csv  ia_incarc_data.csv
data/id/: id_geocorr_puma_2012.csv  id_geocorr_puma_2022.csv  id_hud_hcv_picsubhhds_2022.csv  id_hud_income_limits_2022.csv  id_incarc_data.csv
data/il/: il_geocorr_puma_2012.csv  il_geocorr_puma_2022.csv  il_hud_hcv_picsubhhds_2022.csv  il_hud_income_limits_2022.csv  il_incarc_data.csv
data/in/: in_geocorr_puma_2012.csv  (+4 more)
modules/: config.py  hcv_data_loading.py  hcv_eligibility_calculation.py  hcv_family_feature_engineering.py  hcv_fill_counties_and_allocation.py  hcv_final_outputs.py  hcv_gap_calculation.py  hcv_income_cleaning_and_household_splitting.py  hcv_prisoner_adjustment.py  main.py
secrets/: ipums_token.txt
src/: README.md
tests/: test_config.py  test_hudlink.py
(+2099 files in other folders)
