[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hudlink"
version = "3.0.0"
description = "Produces household level HUD subsidy eligibility dataframe and county-level summary df linked to HUD PSH data"
authors = [{ name = "Shane Dabney", email = "sdabney@fsu.edu" }]
readme = "README.md"
requires-python = ">=3.9"

# setuptools should look for packages under src/
[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
hudlink = "hudlink.main:main"
