[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hudlink"
version = "3.0.0"
description = "Produces household level HUD subsidy eligibility dataframe and county-level summary df linked to HUD PSH data"
authors = [{ name = "Shane Dabney", email = "sdabney@fsu.edu" }]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
   "pandas>=1.3.0",
   "numpy>=1.20.0",
   "ipumspy>=0.1.0",
   "plotly>=5.0.0"
]

[project.optional-dependencies]
test = [
   "pytest>=6.0",
   "pytest-cov>=3.0",
]

# setuptools should look for packages under src/
[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
hudlink = "hudlink.main:main"