[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hudlink"
version = "3.1.0"
description = "Automated ACS-HUD data linking for housing analysis: program-eligibility and protected-class flagging, and analysis-ready county summaries"
authors = [{ name = "Shane Dabney", email = "sdabney@fsu.edu" }]
readme = {file = "README.md", content-type = "text/markdown"}
license = "MIT"
license-files=["LICENSE"]
requires-python = ">=3.9"
keywords = ["housing-economics", "housing-policy", "affordable-housing", "HUD", "ACS", "economic-analysis", "policy-research", "urban-planning"]

dependencies = [
   "pandas>=1.3.0",
   "numpy>=1.20.0",
   "ipumspy>=0.1.0",
   "plotly>=5.0.0"
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: GIS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
test = [
   "pytest>=6.0",
   "pytest-cov>=3.0",
]

[project.urls]
"Homepage" = "https://github.com/sdabney5/hudlink"
"Bug Tracker" = "https://github.com/sdabney5/hudlink/issues"
"Documentation" = "https://github.com/sdabney5/hudlink#readme"

[project.scripts]
hudlink = "hudlink.main:main"

[tool.setuptools]
include-package-data = true
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]